# kaggle-template

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
sample/houseprices/: houseprices.ipynb
sample/titanic/: titanic.ipynb
