[project]
name = "kaggle-template"
version = "0.1.0"
description = "WSL + uv + venv Kaggle template"
readme = "README.md"
requires-python = ">=3.11"

# ここは CPU/共通ライブラリのみ（GPU系はREADME手順で別途）
dependencies = [
  "numpy<2.0", # まずは保守的に固定。問題なければ外す/上げる
  "pandas",
  "scikit-learn",
  "matplotlib",
  "seaborn",
  "lightgbm",
  "xgboost",
  "catboost",
  "optuna",
  "polars",
  "pyyaml",
  "tqdm",
  "kaggle",
  "python-dotenv",
  "jinja2",
  "notebook>=7.4.5",
  "jupyterlab>=4.4.7",
  "ipykernel>=6.30.1",
  "pre-commit>=4.3.0",
]

[tool.uv]
# 開発時にだけ必要な依存
dev-dependencies = [
  "ipykernel",
  "ruff",
  "black",
  "isort",
  "pre-commit",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I"]
ignore = []
exclude = ["data", "outputs", ".venv"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
