[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kaggle-template"
version = "0.1.0"
description = "WSL + uv + venv Kaggle template"
readme = "README.md"
requires-python = ">=3.11"

# ここは CPU/共通ライブラリのみ（GPU系はREADME手順で別途）
dependencies = [
  "numpy<2.0", # まずは保守的に固定。問題なければ外す/上げる
  "pandas",
  "scikit-learn",
  "matplotlib",
  "seaborn",
  "lightgbm",
  "xgboost",
  "catboost",
  "optuna",
  "polars",
  "pyyaml",
  "tqdm",
  "kaggle",
  "python-dotenv",
  "jinja2",
  "notebook>=7.4.5",
  "jupyterlab>=4.4.7",
  "ipykernel>=6.30.1",
  "pre-commit>=4.3.0",
  "japanize-matplotlib>=1.1.3",
  "matplotlib-venn>=1.1.2",
  "holiday>=1.0.0",
  "holidays>=0.81",
]

# uv の新形式：開発時のみ必要な依存は dependency-groups.dev へ
[dependency-groups]
dev = [
  "ipykernel",
  "ruff",
  "black",
  "isort",
  "pre-commit",
]

# setuptools にパッケージ検出ポリシーを明示
[tool.setuptools.packages.find]
include = ["kaggle_template*"]
exclude = ["data*", "sample*", "outputs*", "notebooks*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I"]
ignore = []
exclude = ["src", "notebooks", "data", "models", "outputs", ".venv"]
